Fix name of rollable items not showing the accent color on hover.

--- a/src/styles/ui/items-list.scss
+++ b/src/styles/ui/items-list.scss
@@ -61,8 +61,9 @@ ol {
                     }
                 }
 
-                &.skill-roll,
-                &.rollable {
+                .skill-name,
+                .skill-roll,
+                .rollable {
                     &:hover {
                         color: $accent-color;
                         text-shadow: none;
